--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "type": "module",
     "name": "irk",
     "devDependencies": {
+        "esbuild": "^0.13.6",
         "rollup": "^2.36.2",
         "rollup-plugin-terser": "^7.0.2"
+    },
+    "browser": {
+        "./test.js": "./no-test.js"
     }
 }
